docs: add basic syllabus

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,13 +5,12 @@ const currentYear = new Date().getFullYear()
 ---
 
 <footer>
-  <CallToAction />
+  <!-- <CallToAction /> -->
   <section class="py-8">
     <div class="container">
       <p>
-        &copy; {currentYear} - Starter Theme for <a href="https://astro.build/">Astro</a>. Made with ❤️ by <a
-          href="https://github.com/markteekman">Mark Teekman</a
-        >.
+        &copy; {currentYear} - Powered by <a href="https://astro.build/">Astro</a> with theme <a href="https://github.com/markteekman/accessible-astro-starter">Accessible-Astro</a>. Made with ❤️ by <a
+          href="https://github.com/truc0">truc0</a>.
       </p>
     </div>
   </section>
