--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,7 +8,7 @@ import logo from '../assets/img/logo.svg'
 <div id="main-navigation" class="is-desktop py-8">
   <div class="container">
     <a href="/" class="flex items-center gap-2 !no-underline">
-      <Image src={logo} alt="Your Logo" width="47" height="37" />
+      <Image src={logo} format="svg" alt="Your Logo" width="47" height="37" />
       <span class="font-bold">NIMO2401 - Intro to Web Dev</span>
     </a>
     <div class="wrapper">
