--- a/src/pages/blog/[post].astro
+++ b/src/pages/blog/[post].astro
@@ -3,7 +3,7 @@ import DefaultLayout from '../../layouts/DefaultLayout.astro'
 import { Breadcrumbs, BreadcrumbsItem } from 'accessible-astro-components'
 
 export async function getStaticPaths() {
-  const data = await fetch('https://jsonplaceholder.typicode.com/posts').then((response) => response.json())
+  const data = [] as any[]
 
   return data.map((post) => {
     return {
