feat: add layout for handout posts

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,13 +16,13 @@ const { src = '/cat.jpg' } = Astro.props
             <Icon name="ion:star-outline" />
             查看课程大纲
           </a>
-          <!-- <a
+          <a
             class="button has-icon color-secondary"
-            href="https://github.com/markteekman/accessible-astro-starter/blob/main/README.md"
+            href="#handouts"
           >
-            <Icon name="ion:bookmark-outline" />
-            查看课程安排
-          </a> -->
+            <Icon name="ion:book-outline" />
+            查看课程文档
+          </a>
         </div>
       </div>
       <img class="hidden lg:block cliped-cat" src={src} alt="" decoding="async" />
