--- a/src/components/SiteMeta.astro
+++ b/src/components/SiteMeta.astro
@@ -1,18 +1,17 @@
 ---
 import { ViewTransitions } from 'astro:transitions'
 
-const { title, description, url, image, author } = Astro.props
-
-let subtitle = 'Accessible Astro Starter'
+const { title, subtitle, description, url, image, author } = Astro.props
+const titleStr = (title && subtitle) ? `${title} | ${subtitle}` : `${title}${subtitle}`
 ---
 
 <!-- general meta -->
-<meta name="title" content={`${title} - ${subtitle}`} />
+<meta name="title" content={titleStr} />
 <meta name="description" content={description} />
 <meta name="author" content={author} />
 
 <!-- open graph -->
-<meta property="og:title" content={`${title} - ${subtitle}`} />
+<meta property="og:title" content={titleStr} />
 <meta property="og:description" content={description} />
 <meta property="og:type" content="website" />
 <meta property="og:url" content={url} />
@@ -21,6 +20,6 @@ let subtitle = 'Accessible Astro Starter'
 <!-- twitter card -->
 
 <!-- page title -->
-<title>{title} - {subtitle}</title>
+<title>{titleStr}</title>
 
 <ViewTransitions />
