docs: upload first post

--- a/src/assets/scss/globals.scss
+++ b/src/assets/scss/globals.scss
@@ -11,4 +11,5 @@
 @use 'base/button';
 @use 'base/color';
 @use 'base/outline';
-@use 'base/space-content';
+// @use 'base/space-content';
+@use 'base/markdown-content';
