--- a/src/pages/handouts/[...slug].astro
+++ b/src/pages/handouts/[...slug].astro
@@ -24,8 +24,7 @@ const { Content } = await handout.render()
 
 <DefaultLayout title={handout.data.title}>
   <div class="container">
-    <!-- <div class="space-content my-12"> -->
-    <div class="prose-lg my-12">
+    <div class="markdown-content my-12">
       <div class="headline">
         <h1 class="">{handout.data.title}</h1>
       </div>
