--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -13,7 +13,7 @@ const {
 } = Astro.props
 ---
 
-<html lang="en" dir="ltr" class="scroll-smooth">
+<html lang="zh" dir="ltr" class="scroll-smooth">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
