--- a/src/pages/handouts/[...slug].astro
+++ b/src/pages/handouts/[...slug].astro
@@ -26,7 +26,7 @@ const hasToc = remarkPluginFrontmatter.toc
 
 <DefaultLayout title={handout.data.title}>
   <div class="container">
-    <div class="flex gap-4 justify-center w-full my-12 relative">
+    <div class="flex gap-4 lg:gap-6 justify-center w-full my-12 relative">
       <div class="markdown-content w-full max-w-full flex-1">
         <div class="headline">
           <h1>{handout.data.title}</h1>
@@ -34,7 +34,7 @@ const hasToc = remarkPluginFrontmatter.toc
         <Content />
       </div>
 
-      {hasToc && <div class="sticky top-10 flex-0 hidden md:block">
+      {hasToc && <div class="sticky top-10 flex-0 h-[50vh] hidden md:block">
         <div class="min-w-40 rounded bg-purple-50 overflow-hidden">
           <TableOfContent headings={headings} />
         </div>
