fix: the content in darkmode is proken

--- a/src/pages/handouts/[...slug].astro
+++ b/src/pages/handouts/[...slug].astro
@@ -35,7 +35,7 @@ const hasToc = remarkPluginFrontmatter.toc
       </div>
 
       {hasToc && <div class="sticky top-10 flex-0 h-[50vh] hidden md:block">
-        <div class="min-w-40 rounded bg-purple-50 overflow-hidden">
+        <div class="min-w-40 rounded bg-purple-50 dark:bg-neutral-800 overflow-hidden">
           <TableOfContent headings={headings} />
         </div>
       </div>}
