--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,9 +7,9 @@ import { Icon } from 'astro-icon/components'
 <header>
   <SkipLinks />
   <Navigation>
-    <!-- <li class="menu-item">
+    <li class="menu-item">
       <a href="/">Home</a>
-    </li> -->
+    </li>
     <!-- <li class="menu-item">
       <a href="/blog/">Blog</a>
     </li> -->
