--- a/src/components/TableOfContent.astro
+++ b/src/components/TableOfContent.astro
@@ -33,7 +33,7 @@ const buildToc = (headings: MarkdownHeading[], maxDepth: number = 6) => {
 const toc = buildToc(headings)
 ---
 
-<div class="py-2 px-2 bg-purple-100 text-purple-700 font-semibold">目录</div>
+<div class="py-2 px-2 bg-purple-100 dark:bg-neutral-800 text-purple-700 dark:text-neutral-100 font-semibold">目录</div>
 <nav class="toc">
   <ul>
     {toc.map(heading => <TableOfContentHeading heading={heading} />)}
