feat: add slides for lesson 1 and 2

--- a/src/pages/handouts/[...slug].astro
+++ b/src/pages/handouts/[...slug].astro
@@ -26,8 +26,8 @@ const hasToc = remarkPluginFrontmatter.toc
 
 <DefaultLayout title={handout.data.title}>
   <div class="container">
-    <div class="flex gap-4 lg:gap-6 justify-center w-full my-12 relative">
-      <div class="markdown-content w-full max-w-full flex-1">
+    <div class="flex gap-4 lg:gap-6 justify-between w-full my-12 relative">
+      <div class="markdown-content w-full flex-1">
         <div class="headline">
           <h1>{handout.data.title}</h1>
         </div>
