docs: add slide entry for lesson-02

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,8 +23,8 @@ const schedules: [string, IScheduleItem[]][] = [
   [
     'JS 前端框架',
     [
-      { content: 'Javascript 语法基础及 DOM 操作', time: 'April 20th', note: '春游，时间会调整' },
-      { content: 'Vue.js 基础', time: 'April 27th', note: '' },
+      { content: 'Javascript 语法基础及 DOM 操作', time: 'April 24th', note: '电路期中 & 半马，时间有调整' },
+      { content: 'Vue.js 基础', time: 'April 27th', note: '春游，时间会调整' },
     ],
   ],
   [
