docs: add common layout lab

--- a/src/assets/scss/globals.scss
+++ b/src/assets/scss/globals.scss
@@ -5,7 +5,7 @@
 @use 'base/reset';
 @use 'base/root';
 @use 'base/font';
-@use 'base/list';
+// @use 'base/list';
 @use 'base/container';
 @use 'base/breakpoint';
 @use 'base/button';
