--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,8 +30,15 @@ const schedules: [string, IScheduleItem[]][] = [
   [
     '后端应用开发',
     [
-      { content: '后端基本组件及 Django 基础 I', time: 'May 4th', note: '' },
-      { content: 'Django 基础 II', time: 'May 11th', note: '' },
+      { content: '后端基本组件及 Django 基础 I', time: 'May 25th', note: '🟢' },
+      { content: 'Django 基础 II', time: 'June 1st', note: '' },
+    ],
+  ],
+  [
+    '周边商城项目',
+    [
+      { content: '商品概览页、购物车页面开发', time: 'May 29th', note: '' },
+      { content: '后端开发及 API 接入', time: 'June 5th', note: '' },
     ],
   ],
 ]
